syntax = "proto3";

option java_package = "com.jkramr.demowalletapi.grpc";

import "common.proto";

service BalanceService {
    rpc GetBalance (BalanceRequest) returns (BalanceResponse) {}
}

message BalanceRequest {
    int32 user_id = 1;
}

message BalanceInfo {
    Currency currency = 1;
    double amount = 2;
}

message BalanceResponse {
    enum ResponseCode {
        OK = 0;
        INVALID_REQUEST = 1;
        SERVER_ERROR = 999;
    }
    ResponseCode code = 1;
    repeated BalanceInfo balanceInfo = 2;
}